--- a/package.json
+++ b/package.json
@@ -8,17 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@backpacker/primitives": "^3.0.1",
+    "@dudigital/react-native-zoomable-view": "^1.1.3",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/native-stack": "^6.2.3",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "immer": "^9.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-react-native-wcandillon": "^3.7.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "~4.0.0"
   },
   "private": true
